<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz_app.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/bible_image"
                android:scaleType="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bible"/>
            <EditText
                android:id="@+id/name_of_player"
                style="@style/nameOfPlayer"
                android:hint="@string/namePlayer"/>
            <TextView
                android:text="@string/question1"
               style="@style/questions"/>

            <TextView
                style="@style/questionBody"
                android:text="@string/questionOne"/>

            <RadioGroup
                android:id="@+id/radioQ1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/q1Option1"
                    style="@style/radioButtons"
                    android:text="@string/Q1option1"
                    android:buttonTint="@color/questionColor"/>

                <RadioButton
                    android:id="@+id/q1Option2"
                    style="@style/radioButtons"
                    android:text="@string/Q1option2"
                    android:buttonTint="@color/questionColor"/>

                <RadioButton
                    android:id="@+id/q1Option3"
                    style="@style/radioButtons"
                    android:text="@string/Q1option3"
                    android:buttonTint="@color/questionColor"/>
            </RadioGroup>

            <TextView
                style="@style/questions"
                android:text="@string/question2"/>
            <TextView
                style="@style/questionBody"
                android:text="@string/questionTwo"/>

            <RadioGroup
                android:id="@+id/radioQ2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/q2Option1"
                    style="@style/radioButtons"
                    android:text="@string/Q1option1"
                    android:buttonTint="@color/questionColor"/>

                <RadioButton
                    android:id="@+id/q2Option2"
                    style="@style/radioButtons"
                    android:text="@string/Q1option2"
                    android:buttonTint="@color/questionColor"/>

                <RadioButton
                    android:id="@+id/q2Option3"
                    style="@style/radioButtons"
                    android:text="@string/Q1option3"
                    android:buttonTint="@color/questionColor"/>
            </RadioGroup>

            <TextView
                style="@style/questions"
                android:text="@string/question3"/>
            <TextView
                style="@style/questionBody"
                android:text="@string/questionThree"/>
            <EditText
                android:id="@+id/q3Option"
                style="@style/editTextBoxes"
                android:hint="@string/Q3answer"
                android:backgroundTint="@color/questionColor"/>
            <TextView
                style="@style/questions"
                android:text="@string/question4"/>
            <TextView
                style="@style/questionBody"
                android:text="@string/questionFour"/>
            <CheckBox
                android:id="@+id/q4Option1"
                style="@style/checkBoxes"
                android:text="@string/Q4option1"
                android:buttonTint="@color/questionColor"/>
            <CheckBox
                android:id="@+id/q4Option2"
                style="@style/checkBoxes"
                android:text="@string/Q4option2"
                android:buttonTint="@color/questionColor"/>
            <CheckBox
                android:id="@+id/q4Option3"
                style="@style/checkBoxes"
                android:text="@string/Q4option3"
                android:buttonTint="@color/questionColor"/>
            <CheckBox
                android:id="@+id/q4Option4"
                style="@style/checkBoxes"
                android:text="@string/Q4option4"
                android:buttonTint="@color/questionColor"/>
            <TextView
                style="@style/questions"
                android:text="@string/question5" />
            <TextView
                style="@style/questionBody"
                android:text="@string/questionFive" />
            <EditText
                android:id="@+id/q5Option"
                style="@style/editTextBoxes"
                android:hint="@string/Q5answer"
                android:backgroundTint="@color/questionColor"/>
            <TextView
                style="@style/questions"
                android:text="@string/question6" />
            <TextView
               style="@style/questionBody"
                android:text="@string/questionSix" />
            <CheckBox
                android:id="@+id/q6Option1"
                style="@style/checkBoxes"
                android:text="@string/Q6option1"
                android:buttonTint="@color/questionColor"/>
            <CheckBox
                android:id="@+id/q6Option2"
                style="@style/checkBoxes"
                android:text="@string/Q6option2"
                android:buttonTint="@color/questionColor"/>
            <CheckBox
                android:id="@+id/q6Option3"
                style="@style/checkBoxes"
                android:text="@string/Q6option3"
                android:buttonTint="@color/questionColor"/>
            <CheckBox
                android:id="@+id/q6Option4"
                style="@style/checkBoxes"
                android:text="@string/Q6option4"
                android:buttonTint="@color/questionColor"/>
            <TextView
                style="@style/questions"
                android:text="@string/question7" />
            <TextView
                style="@style/questionBody"
                android:text="@string/questionSeven" />
            <RadioGroup
                android:id="@+id/radioQ7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/q7Option1"
                    style="@style/radioButtons"
                    android:text="@string/Q7option1"
                    android:buttonTint="@color/questionColor"/>

                <RadioButton
                    android:id="@+id/q7Option2"
                    style="@style/radioButtons"
                    android:text="@string/Q7option2"
                    android:buttonTint="@color/questionColor"/>

                <RadioButton
                    android:id="@+id/q7Option3"
                    style="@style/radioButtons"
                    android:text="@string/Q7option3"
                    android:buttonTint="@color/questionColor"/>
            </RadioGroup>

            <TextView
                style="@style/questions"
                android:text="@string/question8" />
            <TextView
                style="@style/questionBody"
                android:text="@string/questionEight" />
            <EditText
                android:id="@+id/q8Option"
                style="@style/editTextBoxes"
                android:hint="@string/Q8answer"
                android:backgroundTint="@color/questionColor"/>
            <Button
                style="@style/submission"
                android:text="@string/submit_quiz"
                android:onClick="submitQuiz"
                />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
